# controller/book.go
@@ -1,8 +1,8 @@
 package controller
 
 import (
-	"fmt"
 	"github.com/gin-gonic/gin"
+	"github.com/jinzhu/gorm"
 	"github.com/zcong1993/libgo/gin"
 	"github.com/zcong1993/rest-go/model"
 	"github.com/zcong1993/rest-go/mysql"
@@ -10,10 +10,54 @@ import (
 	"net/http"
 )
 
-func Book(c *gin.Context) {
+// Books query all for /books
+// @Summary Books pagination query all
+// @Description
+// @Accept  json
+// @Produce  json
+// @Param   default limit query int false "limit" default(100)
+// @Param   default offset query int false "offset" default(0)
+// @Success 200 {array} model.Book
+// @Failure 500 "StatusInternalServerError"
+// @Router /books [get]
+func BooksAll(c *gin.Context) {
 	limit, offset := ginerr.DefaultOffsetLimitPaginator.ParsePagination(c)
-	fmt.Println(limit, offset)
-	c.Status(204)
+	q := mysql.DB.Model(new(model.Book)).Order("created_at DESC")
+
+	var data []model.Book
+	count, err := utils.PaginationQuery(q, &data, limit, offset)
+	if err != nil {
+		c.Status(http.StatusInternalServerError)
+		return
+	}
+
+	utils.ResponsePagination(c, count, data)
+}
+
+// Books query by id for /books/:id
+// @Summary Books query by id
+// @Description
+// @Accept  json
+// @Produce  json
+// @Param   id  path  string  true  "Book id"
+// @Success 200 {object} model.Book
+// @Failure 500 "StatusInternalServerError"
+// @Router /books/{id} [get]
+func BooksGet(c *gin.Context) {
+	id := c.Param("id")
+	var book model.Book
+	err := mysql.DB.First(&book, "id = ?", id).Error
+
+	if err != nil {
+		if gorm.IsRecordNotFoundError(err) {
+			c.Status(http.StatusNotFound)
+			return
+		}
+		c.Status(http.StatusInternalServerError)
+		return
+	}
+
+	c.JSON(http.StatusOK, book)
 }
 
 // Test pagination for /p
