# docs/swagger/swagger.yaml
@@ -16,17 +16,46 @@ definitions:
       username:
         type: string
     required:
-    - email
     - password
+    - email
+    type: object
+  model.Book:
+    properties:
+      author_id:
+        type: integer
+      created_at:
+        type: string
+      id:
+        type: integer
+      price:
+        type: number
+      title:
+        type: string
+      updated_at:
+        type: string
     type: object
   model.Token:
     properties:
+      created_at:
+        type: string
+      id:
+        type: integer
       token:
         type: string
+      updated_at:
+        type: string
+      user_id:
+        type: integer
     type: object
   model.User:
     properties:
+      created_at:
+        type: string
       email:
+        type: string
+      id:
+        type: integer
+      updated_at:
         type: string
       username:
         type: string
@@ -40,6 +69,54 @@ info:
   title: Backend API
   version: "0.1"
 paths:
+  /books:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - default: 100
+        description: limit
+        in: query
+        name: limit
+        type: integer
+      - default: 0
+        description: offset
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Book'
+            type: array
+        "500":
+          description: StatusInternalServerError
+      summary: Books pagination query all
+  /books/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Book id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Book'
+            type: object
+        "500":
+          description: StatusInternalServerError
+      summary: Books query by id
   /me:
     get:
       consumes:
