# model/model.go
@@ -1,7 +1,6 @@
 package model
 
 import (
-	"github.com/jinzhu/gorm"
 	"github.com/zcong1993/libgo/utils"
 	"github.com/zcong1993/rest-go/mysql"
 	utils2 "github.com/zcong1993/rest-go/utils"
@@ -15,10 +14,10 @@ var (
 
 // User is user model
 type User struct {
-	gorm.Model `json:"-"`
-	Username   string `json:"username" gorm:"type:varchar(150);unique_index;not null"`
-	Password   string `json:"-" gorm:"type:varchar(150);not null"`
-	Email      string `json:"email" gorm:"type:varchar(100);unique_index;not null"`
+	Model
+	Username string `json:"username" gorm:"type:varchar(150);unique_index;not null"`
+	Password string `json:"-" gorm:"type:varchar(150);not null"`
+	Email    string `json:"email" gorm:"type:varchar(100);unique_index;not null"`
 }
 
 func (u *User) Save() error {
@@ -27,10 +26,10 @@ func (u *User) Save() error {
 }
 
 type Token struct {
-	gorm.Model `json:"-"`
-	User       *User  `json:"-"`
-	UserID     uint   `json:"-"`
-	Token      string `json:"token" gorm:"type:varchar(100);index;not null"`
+	Model
+	User   *User  `json:"-"`
+	UserID uint   `json:"user_id"`
+	Token  string `json:"token" gorm:"type:varchar(100);index;not null"`
 }
 
 func (t *Token) IsExpired() bool {
@@ -39,4 +38,12 @@ func (t *Token) IsExpired() bool {
 
 func (t *Token) Refresh() error {
 	return mysql.DB.Model(t).Update("token", utils2.GenerateToken()).Error
+}
+
+type Book struct {
+	Model
+	Title    string  `json:"title" gorm:"type:varchar(150);unique_index;not null"`
+	Price    float64 `json:"price" gorm:"not null"`
+	Author   *User   `json:"-" gorm:"foreignkey:AuthorID"`
+	AuthorID uint    `json:"author_id"`
 }
